fix: Dropdown overflow issue

--- a/packages/frontend/src/components/Header/search.module.css
+++ b/packages/frontend/src/components/Header/search.module.css
@@ -216,8 +216,9 @@ input:focus-visible {
   font-style: normal;
   font-weight: 400;
   line-height: 16px;
-  margin-left: 5rem;
-  min-width: 100px;
+  margin-right: 8px;
+  text-align: right;
+  min-width: 150px;
 }
 
 .keyText {
@@ -236,6 +237,7 @@ input:focus-visible {
 .rightContent {
   display: flex;
   align-items: center;
+  align-self: baseline;
 }
 
 .searchDetails {
